# mahjong-py

./: Makefile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: conf.py
mahjon/mahjong_pai/: pai.py  shu_pai.py  zi_pai.py
mahjong/domain/hand/: __init__.py  duan_yao_jiu.py  hand.py  mian_zi.py  san_se_tong_shun.py
mahjong/domain/ju/: __init__.py  bi_pai.py  ju.py  pei_pai.py
mahjong/domain/pai/: __init__.py  pai.py  shu_pai.py  zi_pai.py
mahjong/hand/: duan_yao_jiu.py  hand.py  mian_zi.py
mahjong/ju/: __init__.py  bi_pai.py  ju.py  pei_pai.py
mahjong/pai/: __init__.py  pai.py  shu_pai.py  zi_pai.py
