[tool.poetry]
name = "mahjong-py"
version = "0.1.0"
description = "mahjong"
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
jupyterlab = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
