[tool.poetry]
name = "mahjong-py"
version = "0.1.0"
description = "mahjong"
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
jupyterlab = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
exclude = """
/(
    .git
    | .venv
    | .mypy_cache
    | .pytest_cache
    | data
    | docs
    | htmlcov
    | notebook
/)
"""

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
